tests/od2trips/errors/incomplete_connections/both_missing2of2/errors.od2trips
Error: District '2' has no sink.
Error: District '2' has no source.
Error: Loading failed.
Quitting (on error).
